# ChangeLog for dev-ruby/krb5-auth
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*krb5-auth-0.7-r5 (16 Sep 2014)

  16 Sep 2014; Hans de Graaff <graaff@gentoo.org> +krb5-auth-0.7-r5.ebuild:
  Add ruby20, ruby21. EAPI=5. Work around deprecated rake code.

*krb5-auth-0.7-r4 (11 Oct 2012)

  11 Oct 2012; Hans de Graaff <graaff@gentoo.org> +krb5-auth-0.7-r4.ebuild,
  +files/krb5-auth-0.7-ruby19.patch:
  Add ruby19 with proper patch.

*krb5-auth-0.7-r3 (03 Jun 2011)

  03 Jun 2011; Hans de Graaff <graaff@gentoo.org> -krb5-auth-0.7-r1.ebuild,
  -krb5-auth-0.7-r2.ebuild, +krb5-auth-0.7-r3.ebuild:
  Leave the shared object in ext because that is where the gemspec says it will
  be. Install example.rb.

*krb5-auth-0.7-r2 (21 Apr 2011)

  21 Apr 2011; Hans de Graaff <graaff@gentoo.org> +krb5-auth-0.7-r2.ebuild:
  Actually install documentation files.

  07 Jan 2011; Hans de Graaff <graaff@gentoo.org> krb5-auth-0.7-r1.ebuild:
  Keyword ~x86-macos.

  07 Nov 2010; Hans de Graaff <graaff@gentoo.org> -krb5-auth-0.7.ebuild,
  krb5-auth-0.7-r1.ebuild, metadata.xml:
  Mark ready for ~x86. Remove old version.

*krb5-auth-0.7-r1 (12 Aug 2010)

  12 Aug 2010; Hans de Graaff <graaff@gentoo.org> +krb5-auth-0.7-r1.ebuild:
  Fix installation: install example in documentation directory, install
  shared object in lib.

*krb5-auth-0.7 (12 Aug 2010)

  12 Aug 2010; Hans de Graaff <graaff@gentoo.org> +krb5-auth-0.7.ebuild,
  +metadata.xml:
  Initial import.
