@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/krb5-auth
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jul 2015; Hans de Graaff <graaff@gentoo.org> -krb5-auth-0.7-r3.ebuild,
+  -krb5-auth-0.7-r4.ebuild:
+  Cleanup.
 
 *krb5-auth-0.7-r5 (16 Sep 2014)
 
